<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="#27272b">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/app_bar_main">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:background="@color/transparent"
            android:layout_height="180dp"/>

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/circleindicator_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/viewPager"/>

        <TextView
            android:id="@+id/sub_title"
            android:layout_below="@id/circleindicator_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/sub_title"
            android:textColor="@color/small_card_bg"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sub_title"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/StorelinearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_1_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_3_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_5_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_7_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton9"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_9_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/StorelinearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_2_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_4_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_6_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton8"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_8_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/small_cardview10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/site_card_bottomMargin"
                    app:cardBackgroundColor="@color/cardBackgroundColor"
                    app:cardElevation="@dimen/cardElevation">

                    <ImageButton
                        android:id="@+id/imageButton10"
                        android:layout_width="@dimen/site_image_width"
                        android:layout_height="@dimen/site_image_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/site_image_margin"
                        android:background="#01000000"
                        android:scaleType="fitCenter"/>

                    <TextView
                        android:id="@+id/storename10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/site_name_bottom_magrin"
                        android:layout_marginTop="@dimen/site_name_top_margin"
                        android:text="@string/store_10_name"
                        android:textColor="@color/site_name_textColor"
                        android:textSize="@dimen/site_name_textSize" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>